# gemini_live

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
claudedocs/: diseno-gemini-agente-voz.md
frontend/: app.js  index.html
src/gemini_live_demo/: __init__.py  app.py  audio.py  audio_io.py  runner.py  session.py
src/gemini_live_demo/cli/: __init__.py  app.py  audio_io.py  runner.py
src/gemini_live_demo/core/: __init__.py  audio.py  config.py  events.py  metrics.py  session.py
src/gemini_live_demo/web/: __init__.py  server.py
tests/: test_audio.py  test_audio_io.py  test_cli_app.py  test_config.py  test_events.py  test_metrics.py  test_runner.py  test_session.py  test_web.py
