[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-live-demo"
version = "0.1.0"
description = "Voice demo for Gemini Live API with Python CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "python-dotenv>=1.0,<2.0",
  "numpy>=1.26,<3.0",
  "sounddevice>=0.4.7,<1.0",
  "scipy>=1.11,<2.0",
  "google-genai>=0.6.0",
]

[project.scripts]
gemini-live-demo = "gemini_live_demo.app:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]



