[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-live-demo"
version = "0.1.0"
description = "Voice demo for Gemini Live API with Python CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer==0.26.8",
  "rich==15.0.0",
  "python-dotenv==1.2.2",
  "numpy==2.5.0",
  "sounddevice==0.5.5",
  "scipy==1.18.0",
  "google-genai==2.10.0",
]

[project.scripts]
gemini-live-demo = "gemini_live_demo.app:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest==9.1.1",
]



