[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-live-demo"
version = "0.1.0"
description = "Voice demo for Gemini Live API with Python CLI"
requires-python = ">=3.12"
dependencies = [
  "typer==0.26.8",
  "rich==15.0.0",
  "python-dotenv==1.2.2",
  "numpy==2.5.0",
  "sounddevice==0.5.5",
  "scipy==1.18.0",
  "google-genai==2.10.0",
  "fastapi==0.139.0",
  "uvicorn[standard]==0.49.0",
]

[project.scripts]
gemini-live-demo = "gemini_live_demo.cli.app:app"
gemini-live-web = "gemini_live_demo.web.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.14.4",
    "mypy==1.19.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true



